update to java 17 and scala 2.12.19 version